# mailmap

./: install.sh
backend/: CMakeLists.txt  app.py  main.cpp  yaml_parser.cpp  yaml_parser.hpp
backend/cyno/: README.md  cyno.h
backend/scripts/: crow.nginx  crow_mail.service  dep.sh  start.sh
frontend/: index.html
frontend/src/: App.vue
frontend/static/js/: index.js
scripts/: archive_converter.py  configure_mail.sh  configure_mailman.sh  dep.sh  deploy.sh  settings.py  setup_webui.sh  test.sh  webui.nginx
